[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.59.0",
]

[tool.uv]
package = false
ANTHROPIC_API_KEY = "sk-ant-..."
SUPABASE_URL = "https://SEU-PROJETO.supabase.co"
SUPABASE_KEY = "sua-service-role-key-ou-anon-key"
ANTHROPIC_MODEL = "claude-haiku-4-5-20251001"